--- a/templates/rotate-backups.ini.j2
+++ b/templates/rotate-backups.ini.j2
@@ -1,7 +1,7 @@
 [{{ rotate_target_directory }}]
-hourly = {{ rotate_retintion_config.hourly }}
-daily = {{ rotate_retintion_config.daily }}
-weekly = {{ rotate_retintion_config.weekly }}
-monthly = {{ rotate_retintion_config.monthly }}
-yearly = {{ rotate_retintion_config.yearly }}
-ionice = {{ rotate_retintion_config.ionice }}
+hourly = {{ rotate_retention_config.hourly }}
+daily = {{ rotate_retention_config.daily }}
+weekly = {{ rotate_retention_config.weekly }}
+monthly = {{ rotate_retention_config.monthly }}
+yearly = {{ rotate_retention_config.yearly }}
+ionice = {{ rotate_retention_config.ionice }}
