Make ionice parameter optional

--- a/templates/rotate-backups.ini.j2
+++ b/templates/rotate-backups.ini.j2
@@ -5,6 +5,8 @@ daily = {{ target.daily }}
 weekly = {{ target.weekly }}
 monthly = {{ target.monthly }}
 yearly = {{ target.yearly }}
+{% if target.ionice is defined -%}
 ionice = {{ target.ionice }}
+{%- endif %}
 
 {% endfor %}
